--- a/src/client/styles/_animation.scss
+++ b/src/client/styles/_animation.scss
@@ -1,25 +1,39 @@
 @keyframes hinge {
-  0% {
-    transform-origin: top right;
-    animation-timing-function: ease-in-out;
-  }
+    0% {
+        transform-origin: top right;
+        animation-timing-function: ease-in-out;
+    }
+    20%,
+    60% {
+        transform: rotate3d(0, 0, 1, -50deg);
+        transform-origin: top right;
+        animation-timing-function: ease-in-out;
+    }
+    40%,
+    80% {
+        transform: rotate3d(0, 0, 1, -40deg);
+        transform-origin: top right;
+        animation-timing-function: ease-in-out;
+    }
+    80% {
+        transform: rotate3d(0, 0, 1, -45deg);
+    }
+    to {
+        transform: translate3d(0, 2000px, 0);
+    }
+}
 
-  20%, 60% {
-    transform: rotate3d(0, 0, 1, -50deg);
-    transform-origin: top right;
-    animation-timing-function: ease-in-out;
-  }
-
-  40%, 80% {
-    transform: rotate3d(0, 0, 1, -40deg);
-    transform-origin: top right;
-    animation-timing-function: ease-in-out;
-  }
-  80% {
-    transform: rotate3d(0, 0, 1, -45deg);
-  }
-
-  to {
-    transform: translate3d(0, 2000px, 0);
-  }
+@keyframes anim {
+    10% {
+        stroke-dasharray: 28px, 200px;
+        stroke-dashoffset: -22px;
+    }
+    50% {
+        stroke-dasharray: 70px, 200px;
+        stroke-dashoffset: -70px;
+    }
+    100% {
+        stroke-dasharray: 2px, 200px;
+        stroke-dashoffset: -198px;
+    }
 }
