change watch list

--- a/src/client/styles/_pageSplash.scss
+++ b/src/client/styles/_pageSplash.scss
@@ -21,7 +21,7 @@
         transform-origin: right top;
         animation: hinge 3s ease-in forwards;
     }
-    // loading cube 
+    // loading spinner 
     .loading-spinner {
         .loading_svg #outline {
             stroke-dasharray: 2px, 200px;
