--- a/src/client/styles/_presentation.scss
+++ b/src/client/styles/_presentation.scss
@@ -84,6 +84,7 @@ table {
 body {
     font-family: 'PT Sans', sans-serif;
     min-height: 740px;
+    overflow: hidden;
 
     background: rgb(215, 215, 215);
     background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(240, 240, 240)), to(rgb(190, 190, 190)));
