intro of the ancient way to achieve some specified layout .

--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -1,4 +1,6 @@
 // @import "variables";
 @import "animation";
+@import "flexGrid";
 @import "pageSplash";
 @import "presentation";
+@import "sliders";
