--- a/src/client/styles/_sliders.scss
+++ b/src/client/styles/_sliders.scss
@@ -1,91 +1,315 @@
-.hljs{display:block;padding:.5em;background:#23241f}.hljs,.hljs-tag,.css .hljs-rules,.css .hljs-value,.css .hljs-function .hljs-preprocessor,.hljs-pragma{color:#f8f8f2}.hljs-strongemphasis,.hljs-strong,.hljs-emphasis{color:#a8a8a2}.hljs-bullet,.hljs-blockquote,.hljs-horizontal_rule,.hljs-number,.hljs-regexp,.alias .hljs-keyword,.hljs-literal,.hljs-hexcolor{color:#ae81ff}.hljs-tag .hljs-value,.hljs-code,.hljs-title,.css .hljs-class,.hljs-class .hljs-title:last-child{color:#a6e22e}.hljs-link_url{font-size:80%}.hljs-strong,.hljs-strongemphasis{font-weight:bold}.hljs-emphasis,.hljs-strongemphasis,.hljs-class .hljs-title:last-child{font-style:italic}.hljs-keyword,.hljs-function,.hljs-change,.hljs-winutils,.hljs-flow,.lisp .hljs-title,.clojure .hljs-built_in,.nginx .hljs-title,.tex .hljs-special,.hljs-header,.hljs-attribute,.hljs-symbol,.hljs-symbol .hljs-string,.hljs-tag .hljs-title,.hljs-value,.alias .hljs-keyword:first-child,.css .hljs-tag,.css .unit,.css .hljs-important{color:#f92672}.hljs-function .hljs-keyword,.hljs-class .hljs-keyword:first-child,.hljs-constant,.css .hljs-attribute{color:#66d9ef}.hljs-variable,.hljs-params,.hljs-class .hljs-title{color:#f8f8f2}.hljs-string,.css .hljs-id,.hljs-subst,.haskell .hljs-type,.ruby .hljs-class .hljs-parent,.hljs-built_in,.sql .hljs-aggregate,.django .hljs-template_tag,.django .hljs-variable,.smalltalk .hljs-class,.django .hljs-filter .hljs-argument,.smalltalk .hljs-localvars,.smalltalk .hljs-array,.hljs-attr_selector,.hljs-pseudo,.hljs-addition,.hljs-stream,.hljs-envvar,.apache .hljs-tag,.apache .hljs-cbracket,.tex .hljs-command,.hljs-prompt,.hljs-link_label,.hljs-link_url{color:#e6db74}.hljs-comment,.hljs-javadoc,.java .hljs-annotation,.python .hljs-decorator,.hljs-template_comment,.hljs-pi,.hljs-doctype,.hljs-deletion,.hljs-shebang,.apache .hljs-sqbracket,.tex .hljs-formula{color:#75715e}.coffeescript .javascript,.javascript .xml,.tex .hljs-formula,.xml .javascript,.xml .vbscript,.xml .css,.xml .hljs-cdata,.xml .php,.php .xml{opacity:.5}
+.hljs {
+    display: block;
+    padding: .5em;
+    background: #23241f
+}
+
+.hljs,
+.hljs-tag,
+.css .hljs-rules,
+.css .hljs-value,
+.css .hljs-function .hljs-preprocessor,
+.hljs-pragma {
+    color: #f8f8f2
+}
+
+.hljs-strongemphasis,
+.hljs-strong,
+.hljs-emphasis {
+    color: #a8a8a2
+}
+
+.hljs-bullet,
+.hljs-blockquote,
+.hljs-horizontal_rule,
+.hljs-number,
+.hljs-regexp,
+.alias .hljs-keyword,
+.hljs-literal,
+.hljs-hexcolor {
+    color: #ae81ff
+}
+
+.hljs-tag .hljs-value,
+.hljs-code,
+.hljs-title,
+.css .hljs-class,
+.hljs-class .hljs-title:last-child {
+    color: #a6e22e
+}
+
+.hljs-link_url {
+    font-size: 80%
+}
+
+.hljs-strong,
+.hljs-strongemphasis {
+    font-weight: bold
+}
+
+.hljs-emphasis,
+.hljs-strongemphasis,
+.hljs-class .hljs-title:last-child {
+    font-style: italic
+}
+
+.hljs-keyword,
+.hljs-function,
+.hljs-change,
+.hljs-winutils,
+.hljs-flow,
+.lisp .hljs-title,
+.clojure .hljs-built_in,
+.nginx .hljs-title,
+.tex .hljs-special,
+.hljs-header,
+.hljs-attribute,
+.hljs-symbol,
+.hljs-symbol .hljs-string,
+.hljs-tag .hljs-title,
+.hljs-value,
+.alias .hljs-keyword:first-child,
+.css .hljs-tag,
+.css .unit,
+.css .hljs-important {
+    color: #f92672
+}
+
+.hljs-function .hljs-keyword,
+.hljs-class .hljs-keyword:first-child,
+.hljs-constant,
+.css .hljs-attribute {
+    color: #66d9ef
+}
+
+.hljs-variable,
+.hljs-params,
+.hljs-class .hljs-title {
+    color: #f8f8f2
+}
+
+.hljs-string,
+.css .hljs-id,
+.hljs-subst,
+.haskell .hljs-type,
+.ruby .hljs-class .hljs-parent,
+.hljs-built_in,
+.sql .hljs-aggregate,
+.django .hljs-template_tag,
+.django .hljs-variable,
+.smalltalk .hljs-class,
+.django .hljs-filter .hljs-argument,
+.smalltalk .hljs-localvars,
+.smalltalk .hljs-array,
+.hljs-attr_selector,
+.hljs-pseudo,
+.hljs-addition,
+.hljs-stream,
+.hljs-envvar,
+.apache .hljs-tag,
+.apache .hljs-cbracket,
+.tex .hljs-command,
+.hljs-prompt,
+.hljs-link_label,
+.hljs-link_url {
+    color: #e6db74
+}
+
+.hljs-comment,
+.hljs-javadoc,
+.java .hljs-annotation,
+.python .hljs-decorator,
+.hljs-template_comment,
+.hljs-pi,
+.hljs-doctype,
+.hljs-deletion,
+.hljs-shebang,
+.apache .hljs-sqbracket,
+.tex .hljs-formula {
+    color: #75715e
+}
+
+.coffeescript .javascript,
+.javascript .xml,
+.tex .hljs-formula,
+.xml .javascript,
+.xml .vbscript,
+.xml .css,
+.xml .hljs-cdata,
+.xml .php,
+.php .xml {
+    opacity: .5
+}
 
 h3,
-.h3{
-	font-size: 1.5em;
+.h3 {
+    font-size: 1.5em;
 }
 
 h4,
-.h4{
-	font-size: 1.2em;
+.h4 {
+    font-size: 1.2em;
 }
 
-.text-hide{
-	color: transparent;
-	text-shadow: none;
+.text-hide {
+    color: transparent;
+    text-shadow: none;
 }
 
 small,
 .small {
-	font-size: 0.8em;
+    font-size: 0.8em;
 }
 
-pre{
-	font-size: 0;
-	code{
-	font-size: 16px;
-	}
+pre {
+    font-size: 0;
+    code {
+        font-size: 16px;
+    }
 }
 
-.clearfix:before,.clearfix:after {
+.clearfix:before,
+.clearfix:after {
     display: table;
     content: " "
 }
 
-.clearfix:after{
+.clearfix:after {
     clear: both
 }
 
+code {
+    overflow: hidden;
+    position: relative;
+    &.html,
+    &.css,
+    &.js,
+    {
+        &:after {
+            position: absolute;
+            text-align: center;
+            width: 50%;
+            height: 24px;
+            line-height: 24px;
+            background: #444;
+            top: 0;
+            right: 0;
+            transform: translate(50%, -50%) rotate(45deg) translate(0, 4em);
+            box-shadow: 0 0 0 2px #999;
+        }
+    }
+    &.html {
+        &:after {
+            content: 'HTML';
+        }
+    }
+    &.css,
+    {
+        &:after {
+            content: 'CSS';
+        }
+    }
+    &.js,
+    {
+        &:after {
+            content: 'JS';
+        }
+    }
+}
+
 .old_time {
-	ul,li{
-		list-style: inherit;
-	}
-	p{
-		margin-bottom: 20px;
-	}
-	.example_1{
-		width: 100%;
-		margin: 10px auto;
-		border: 1px dashed;
-		margin-bottom: 20px;
-		.row{
-			margin: 0 -15px;
-			div{
-				background: indianred;
-				color: #fff;
-				text-align: center;
-				background-clip: content-box;
-				width: 25%;
-				float: left;
-				padding: 15px;
-				box-sizing: border-box;
-				&:first-child{
-					cursor: pointer;
-				}
-			}
-		}
-	}
-	small {
-		text-align: center;
-		display: block;
-	}
-	.example_2 {
-		height: 100%;
-		background: hsl(160, 30%, 50%);
-		position: relative;
-		div {
-			position: absolute;
-			font-size: 24px;
-			background: hsl(160, 70%, 50%);
-			padding: 20px;
-			top: 0;
-			right: 0;
-			bottom: 0;
-			left: 0;
-			width: 200px;
-			height: 200px;
-			overflow: hidden;
-			margin: auto;
-		}
-	}
+    ul,
+    li {
+        list-style: inherit;
+    }
+    p {
+        margin-bottom: 20px;
+    }
+    .example_1 {
+        width: 100%;
+        margin: 10px auto;
+        border: 1px dashed;
+        margin-bottom: 20px;
+        .row {
+            margin: 0 -15px;
+            div {
+                background: indianred;
+                color: #fff;
+                text-align: center;
+                background-clip: content-box;
+                width: 25%;
+                float: left;
+                padding: 15px;
+                box-sizing: border-box;
+                &:first-child {
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+    small {
+        text-align: center;
+        display: block;
+    }
+    .example_2 {
+        height: 100%;
+        background: hsl(160, 30%, 50%);
+        position: relative;
+        div {
+            position: absolute;
+            font-size: 24px;
+            background: hsl(160, 70%, 50%);
+            padding: 20px;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 200px;
+            height: 200px;
+            overflow: hidden;
+            margin: auto;
+        }
+    }
+}
+
+.flex-slide {
+    .example_1 {
+        width: 100%;
+        margin: 10px auto;
+        border: 1px dashed;
+        display: flex;
+        flex-wrap: wrap;
+        div {
+        	flex: 1;
+            background: indianred;
+            color: #fff;
+            text-align: center;
+            background-clip: content-box;
+            padding: 15px;
+            box-sizing: border-box;
+            &:first-child {
+                cursor: pointer;
+            }
+        }
+    }
+    .example_2 {
+        height: 100%;
+        background: hsl(160, 30%, 50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        div {
+            font-size: 24px;
+            background: hsl(160, 70%, 50%);
+            padding: 20px;
+            width: 200px;
+            // height: 200px;
+        }
+    }
+    pre.hide{
+    	display: none;
+    }
+    select{
+    	font-size: 20px;
+    }
 }
