--- a/src/client/styles/_sliders.scss
+++ b/src/client/styles/_sliders.scss
@@ -178,6 +178,11 @@ pre {
     clear: both
 }
 
+// #title.past,
+// #title.future {
+// 	opacity: 0;
+// }
+
 code {
     overflow: hidden;
     position: relative;
