--- a/src/client/styles/_sliders.scss
+++ b/src/client/styles/_sliders.scss
@@ -321,6 +321,7 @@ code {
 		display: flex;
 		background: hsl(200, 40%, 70%);
 		.item{
+			width: 400px;
 			padding: 10px;
 			box-sizing: border-box;
 			background: hsl(50, 80%, 50%);
