--- a/src/client/styles/_pageSplash.scss
+++ b/src/client/styles/_pageSplash.scss
@@ -16,7 +16,7 @@
     justify-content: center;
     overflow: hidden;
     text {
-        font-family: fantasy;
+        font-family: 'Impact', fantasy;
         fill: #fff;
         font-size: 100px;
         -webkit-font-smoothing: antialiased;
